frontend configuration